--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title : Welcome to the Hind Makboul Home Page
+description : feel free to comments, add and bookmarks this page
