--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title : Welcome to the Hind Makboul Home Page
-header six description : feel free to comments, add and bookmarks this page
+description : feel free to comments, add and bookmarks this page
